k8s/prod/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: voting-prod
  labels:
    app: bcc-cvote
    environment: production
