k8s/prod/backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: voting-prod
  labels:
    app: bcc-cvote
    component: backend
spec:
  type: ClusterIP
  selector:
    app: bcc-cvote
    component: backend
  ports:
    - port: 5000
      targetPort: 5000
      protocol: TCP
      name: http
